--- a/composer.json
+++ b/composer.json
@@ -54,13 +54,13 @@
         "michelf/php-markdown": "1.4.0",
         "michelf/php-smartypants": "^1.8",
         "mustache/mustache": "2.5.1",
-        "sunra/php-simple-html-dom-parser": "v1.5.0",
         "symfony/config": "v2.3.4",
         "symfony/console": "v2.3.4",
         "symfony/yaml": "v2.3.4",
         "twig/twig": "v1.13.2",
         "symfony/event-dispatcher": "^4.0@dev",
-        "leafo/scssphp": "dev-master"
+        "leafo/scssphp": "dev-master",
+        "voku/simple_html_dom": "dev-master"
     },
     "bin": [
         "bin/md2resume"
